<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.amr.games.pacman</groupId>
	<artifactId>PacManGame</artifactId>
	<version>1.0</version>
	<name>PacManGame</name>
	<description>Pac-Man game using explicit state machines</description>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>de.amr.games.pacman.PacManApp</mainClass>
						</manifest>
					</archive>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
		</plugins>

	</build>
	<dependencies>
		<dependency>
			<groupId>de.amr.graph</groupId>
			<artifactId>graph-core</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.amr.graph</groupId>
			<artifactId>graph-grid</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.amr.graph</groupId>
			<artifactId>graph-search</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.amr.statemachine</groupId>
			<artifactId>StateMachine</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>de.amr.easy.game</groupId>
			<artifactId>EasyGame</artifactId>
			<version>1.0</version>
		</dependency>
	</dependencies>
	<url>https://github.com/armin-reichert/pacman</url>
</project>